<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_coverage</name>
  <version>0.0.1</version>
  <description>Nav2 Coverage Server: create coverage poses, plan path through poses, and follow path via a CoverAllMap action.</description>

  <maintainer email="nexoncolors@gmail.com">tai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nav2_common</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
